# DL-Inference

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  AGENTS.md  APPLY_PATCH.md  DELETE_LIST.txt  Makefile  PATCH_NOTES.md  README.md  pyproject.toml
.codex/: config.toml
.codex/agents/: explorer-mini.toml  implementer-mini.toml  planner.toml  reviewer.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
clients/examples/: chat_completion.py  rag_query.py  responses_api.py
configs/inference/: generation-defaults.yaml  models.yaml  quantization.yaml  tensor-parallel.yaml
configs/librechat/: librechat.yaml
configs/litellm/: config.yaml
configs/openwebui/: knowledge-presets.yaml  providers.yaml
configs/policies/: authz.yaml  logging.yaml  rate-limits.yaml
configs/rag/: chunking.yaml  collections.yaml  embeddings.yaml  knowledge_bases.yaml  reranking.yaml  retrieval.yaml  vector_store.yaml
deploy/compose/: docker-compose.base.yml  (+9 more)
eval/: README.md
knowledge/: README.md
repo2ctl/: __init__.py  cli.py
scripts/: bench-local-models.ps1  bench-local-models.sh  bootstrap.ps1  bootstrap.sh  check_docs_refs.py  compare-backends.ps1  compare-backends.sh  export-openapi.ps1  export-openapi.sh  fmt_repo.py  install-nvidia-runtime.ps1  install-nvidia-runtime.sh  lint_repo.py  prepare-model-cache.ps1  prepare-model-cache.sh  rebuild-index.ps1  rebuild-index.sh  repo2.ps1  repo2.sh  smoke-test.ps1  smoke-test.sh  sync-knowledge.ps1  sync-knowledge.sh
(+158 files in other folders)
